--- a/FinalProject/index.html
+++ b/FinalProject/index.html
@@ -7,41 +7,31 @@
 
 		<!--Google Fonts and stylesheet-->
 
-		<link rel="preconnect" href="https://fonts.googleapis.com">
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Bungee&display=swap" rel="stylesheet">
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Bungee&display=swap"
+			rel="stylesheet"
+		/>
 		<link rel="stylesheet" type="text/css" href="css/styles-index.css" />
-
-
 	</head>
 
 	<body class="site">
 		<a class="skip-link screen-reader-text" href="#content">Skip to content</a>
 
+		<figure class="feature">
+			<img src="images/arcanelogo.png" alt="Arcane logo." />
+		</figure>
+
 		<nav>
 			<div class="navbar">
 				<div class="logo"><a href="/index.html">Arcane</a></div>
-			  <ul class="menu">
-				<li><a href="/index.html">Catalogue</a></li>
-				<li><a href="/products.html">Catalogue</a></li>
-				<li><a href="/mission.html">Our Mission</a></li>
-			  </ul>
+				<ul class="menu">
+					<li><a href="/products.html">Products</a></li>
+					<li><a href="/mission.html">Our Mission</a></li>
+				</ul>
 			</div>
-		  </nav>
-		  </div>
-		</body>
-		</html>
-
-		<header class="masthead">
-			<div class="logo">Arcane</div>
-		</header>
-
-		<figure class="feature">
-			<img
-				src="images/arcanelogo.png"
-				alt="Arcane logo."
-			/>
-		</figure>
+		</nav>
 
 		<main id="content" class="main-area">
 			<section class="subheader">
@@ -49,23 +39,22 @@
 					<h2 class="content-title">IGNITE THE COSMOS</h2>
 					<div class="subheader-text">
 						<p>
-							Locally-owned ORIGINAL key holder traysA local business founded by a college student, Arcane Kushtoms wants to bring new high-quality, ORIGINAL trays to the key holder market.
+							A local business founded by a college student, Arcane wants to
+							bring new high-quality, ORIGINAL trays to the key holder market.
 						</p>
 					</div>
-					<!-- .subheader-text -->
 				</div>
-				<!-- .subheader-content -->
 			</section>
-			<!-- .subheader -->
-<div class="learn"><a href="/products.html">Learn More</a></div>
 
-			</section>
+			<div class="bottom-button">
+				<a href="/products.html">Learn More</a>
+			</div>
 		</main>
 		<footer class="footer">
 			<aside>
 				<a href="camilamtamayo.wordpress.com" target="_blank" rel="nofollow"
-					>Copyright © 2024 Camila Tamayo </a
-				>.
+					>Copyright © 2024 Camila Tamayo</a
+				>
 			</aside>
 		</footer>
 	</body>
