--- a/FinalProject/products.html
+++ b/FinalProject/products.html
@@ -13,7 +13,6 @@
 			href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Bungee&display=swap"
 			rel="stylesheet"
 		/>
-		<link rel="stylesheet" type="text/css" href="css/styles-index.css" />
 
 		<link rel="stylesheet" type="text/css" href="css/styles-catalogue.css" />
 	</head>
@@ -21,15 +20,11 @@
 	<body class="site">
 		<a class="skip-link screen-reader-text" href="#content">Skip to content</a>
 
-		<header class="masthead">
-			<div class="logo">Gallery</div>
-		</header>
-
 		<nav>
 			<div class="navbar">
 				<div class="logo"><a href="/index.html">Arcane</a></div>
 				<ul class="menu">
-					<li><a href="/products.html">Catalogue</a></li>
+					<li><a href="/products.html">Products</a></li>
 					<li><a href="/mission.html">Our Mission</a></li>
 				</ul>
 			</div>
@@ -40,19 +35,23 @@
 				<ul>
 					<li>
 						<img src="images/tray4.png" alt="The leaves of a Nerve Plant." />
-						<p>Price: $14.99</p>
+						<h3>Arcane "Wizard Goo" Tray</h3>
+						<p>$14.99 USD</p>
 					</li>
 					<li>
 						<img src="images/tray1.png" alt="A solitary tree in a field." />
-						<p>Price: $10.99</p>
+						<h3>Arcane "Tie or Die" Tray</h3>
+						<p>$14.99 USD</p>
 					</li>
 					<li>
 						<img src="images/tray2.png" alt="A solitary tree in a field." />
-						<p>Price: $12.99</p>
+						<h3>Arcane "DJ Oldie" Tray</h3>
+						<p>$12.99 USD</p>
 					</li>
 					<li>
 						<img src="images/tray3.png" alt="The leaves of a Nerve Plant." />
-						<p>Price: $12.99</p>
+						<h3>Arcane "Peaceful Crystals" Tray</h3>
+						<p>$11.99 USD</p>
 					</li>
 				</ul>
 			</section>
@@ -60,8 +59,8 @@
 		<footer class="footer">
 			<aside>
 				<a href="camilamtamayo.wordpress.com" target="_blank" rel="nofollow"
-					>Copyright © 2024 Camila Tamayo </a
-				>.
+					>Copyright © 2024 Camila Tamayo</a
+				>
 			</aside>
 		</footer>
 	</body>
