--- a/FinalProject/mission.html
+++ b/FinalProject/mission.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>About</title>
+		<title>Our Mission</title>
 
 		<!--Google Fonts and stylesheet-->
 
@@ -13,7 +13,6 @@
 			href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Bungee&display=swap"
 			rel="stylesheet"
 		/>
-		<link rel="stylesheet" type="text/css" href="css/styles-index.css" />
 
 		<link rel="stylesheet" type="text/css" href="css/styles-mission.css" />
 	</head>
@@ -34,8 +33,7 @@
 					<div class="navbar">
 						<div class="logo"><a href="/index.html">Arcane</a></div>
 					  <ul class="menu">
-						<li><a href="/index.html">Catalogue</a></li>
-						<li><a href="/products.html">Catalogue</a></li>
+						<li><a href="/products.html">Products</a></li>
 						<li><a href="/mission.html">Our Mission</a></li>
 					  </ul>
 					</div>
@@ -54,9 +52,13 @@
 						</p>
 						<ul>
 							<li>
+								<div class="bottom-button">
 								<a href="mailto:cmtamayo@my.waketech.edu">Send Us An Email</a>
+							</div>
 							</li>
-							<li><a href="tel:=+1919-866-5000"></a>Call Us</li>
+							<div class="bottom-button">
+							<li><a href="tel:=+1919-866-5000">Call Us</a></li>
+							</div>
 						</ul>
 					</div>
 				</div>
@@ -66,7 +68,7 @@
 			<aside>
 				<a href="camilamtamayo.wordpress.com" target="_blank" rel="nofollow"
 					>Copyright © 2024 Camila Tamayo </a
-				>.
+				>
 			</aside>
 		</footer>
 	</body>
