--- a/FinalProject/index.html
+++ b/FinalProject/index.html
@@ -13,7 +13,7 @@
 			href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Bungee&display=swap"
 			rel="stylesheet"
 		/>
-		<link rel="stylesheet" type="text/css" href="css/styles-index.css" />
+		<link rel="stylesheet" href="../FinalProject/css/styles-indexx.css" />
 	</head>
 
 	<body class="site">
@@ -25,10 +25,10 @@
 
 		<nav>
 			<div class="navbar">
-				<div class="logo"><a href="/index.html">Arcane</a></div>
+				<div class="logo"><a href="../FinalProject/index.html">Arcane</a></div>
 				<ul class="menu">
-					<li><a href="/products.html">Products</a></li>
-					<li><a href="/mission.html">Our Mission</a></li>
+					<li><a href="../FinalProject/products.html">Products</a></li>
+					<li><a href="../FinalProject/mission.html">Our Mission</a></li>
 				</ul>
 			</div>
 		</nav>
@@ -47,12 +47,15 @@
 			</section>
 
 			<div class="bottom-button">
-				<a href="/products.html">Learn More</a>
+				<a href="../FinalProject/products.html">Learn More</a>
 			</div>
 		</main>
 		<footer class="footer">
 			<aside>
-				<a href="camilamtamayo.wordpress.com" target="_blank" rel="nofollow"
+				<a
+					href="https://camilamtamayo.wordpress.com"
+					target="_blank"
+					rel="nofollow"
 					>Copyright © 2024 Camila Tamayo</a
 				>
 			</aside>
