--- a/FinalProject/mission.html
+++ b/FinalProject/mission.html
@@ -31,10 +31,10 @@
 			<div class="navbar">
 				<nav>
 					<div class="navbar">
-						<div class="logo"><a href="/index.html">Arcane</a></div>
+						<div class="logo"><a href="../FinalProject/index.html">Arcane</a></div>
 					  <ul class="menu">
-						<li><a href="/products.html">Products</a></li>
-						<li><a href="/mission.html">Our Mission</a></li>
+						<li><a href="../FinalProject/products.html">Products</a></li>
+						<li><a href="../FinalProject/mission.html">Our Mission</a></li>
 					  </ul>
 					</div>
 				  </nav>
@@ -44,11 +44,10 @@
 
 			<section class="subheader">
 				<div class="subheader-content">
-					<h2 class="content-title">Have Questions?</h2>
+					<h2 class="content-title">Our Mission</h2>
 					<div class="subheader-text-contact">
 						<p>
-							Want to give us a shot? Email us at
-							arcane@fake.com or call us at (123) 456-7890, but if you're a little lazy we get it. You can use the buttons at the bottom as well.
+							We wanted to combine the spirituality of the energies of our universe with the trippy vibes of your average Gemini. Throw away that Rick and Morty tray and give us a shot, because you won't find our designs ANYWHERE else!
 						</p>
 						<ul>
 							<li>
@@ -66,8 +65,8 @@
 		</main>
 		<footer class="footer">
 			<aside>
-				<a href="camilamtamayo.wordpress.com" target="_blank" rel="nofollow"
-					>Copyright © 2024 Camila Tamayo </a
+				<a href="https://camilamtamayo.wordpress.com" target="_blank" rel="nofollow"
+					>Copyright © 2024 Camila Tamayo</a
 				>
 			</aside>
 		</footer>
