--- a/FinalProject/products.html
+++ b/FinalProject/products.html
@@ -22,10 +22,10 @@
 
 		<nav>
 			<div class="navbar">
-				<div class="logo"><a href="/index.html">Arcane</a></div>
+				<div class="logo"><a href="../FinalProject/index.html">Arcane</a></div>
 				<ul class="menu">
-					<li><a href="/products.html">Products</a></li>
-					<li><a href="/mission.html">Our Mission</a></li>
+					<li><a href="../FinalProject/products.html">Products</a></li>
+					<li><a href="../FinalProject/mission.html">Our Mission</a></li>
 				</ul>
 			</div>
 		</nav>
@@ -58,7 +58,10 @@
 		</main>
 		<footer class="footer">
 			<aside>
-				<a href="camilamtamayo.wordpress.com" target="_blank" rel="nofollow"
+				<a
+					href="https://camilamtamayo.wordpress.com"
+					target="_blank"
+					rel="nofollow"
 					>Copyright © 2024 Camila Tamayo</a
 				>
 			</aside>
